<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image_one_signin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="8dp"
        android:text="Welcome"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="#292929"
            android:textColorHint="#797979" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:background="#999999" />

        <EditText
            android:id="@+id/pwd_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="#292929"
            android:textColorHint="#797979" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:background="#999999" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/float_button_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:src="@drawable/round_arrow_forward_24"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:tint="@android:color/white"
                android:layout_marginBottom="20dp"
                android:elevation="0dp"
                app:elevation="0dp"
                android:backgroundTint="#4E525B"
                app:fabCustomSize="80dp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/signin_textview_loginpage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="30dp"
                android:text="Sign In"
                android:textColor="#191919"
                android:textSize="25sp"
                android:padding="15dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/signup_textview_loginpage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="30dp"
                android:onClick="OpenSignUpPage"
                android:padding="15dp"
                android:text="Sign Up"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forgotpwd_textview_loginpage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="30dp"
                android:padding="15dp"
                android:text="Forgot Password"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>